# aws-lambda-serverless-django-weather-app

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  zappa_settings.json
static/css/: styles.css
static/js/: main.js
weather/: asgi.py  urls.py  wsgi.py
weather/articles/: views.py
weather/articles/templates/: article.html
weather/portal/: admin.py  apps.py  models.py  utils.py  views.py
weather/portal/fixtures/: cities.json
weather/portal/migrations/: 0001_initial.py
weather/portal/templates/: base.html  city.html  home.html
weather/settings/: base.py  local.py  prod.py
